# mattttrix

./: .gitignore  pyproject.toml
ldap-bot/: __main__.py  auth_manager.py  discord_bot.py  environment.py  graphql_client.py  ldap_manager.py  user_manager.py
