[project]
name = "ldap-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaye R",email = "kaye.p.rao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "gql[all] (>=4.0.0,<5.0.0)",
    "discord-py (>=2.7.1,<3.0.0)",
    "ldap3 (>=2.9.1,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
